<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_linear_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_iv_profile_picture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/blank_profile_picture"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/colorGrey3"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/profile_tv_name"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:text="@string/pongpanod_sankosik"
        android:textSize="32dp"
        android:textAlignment="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/colorGrey3">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_mail_24"/>
        <TextView
            android:id="@+id/profile_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/pongpanod_email"
            android:textSize="20sp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:id="@+id/profile_bt_logout"
        style="@style/Secondary_button"
        android:text="Logout" />

    <Button
        android:id="@+id/profile_bt_change_password"
        style="@style/Secondary_button"
        android:text="@string/change_password" />
</LinearLayout>