<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_tv_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="45dp"
            android:layout_weight="1"
            android:text="@string/good_morning_pong"
            android:textSize="30sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/home_iv_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:src="@drawable/blank_profile_picture"
            app:civ_border_color="@color/colorGrey3"
            app:civ_border_width="2dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:elevation="50dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey3"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="62.5dp"
                    android:layout_height="62.5dp"
                    android:src="@drawable/ic_baseline_emoji_events_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="Daily Progress"
                    android:textSize="30dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/home_iv_dropdown"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/expandableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/home_sub_cv_personal_stat"
                        android:layout_width="225dp"
                        android:layout_height="225dp"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorGrey3"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/ic_baseline_poll_24" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorWhite"
                                android:gravity="center"
                                android:text="@string/personal_stat"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/home_sub_cv_challenge"
                        android:layout_width="225dp"
                        android:layout_height="225dp"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorGrey3"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/ic_baseline_event_note_24"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorWhite"
                                android:gravity="center"
                                android:text="@string/challenge"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/home_sub_cv_ranking"
                        android:layout_width="225dp"
                        android:layout_height="225dp"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorGrey3"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/ic_baseline_group_24" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorWhite"
                                android:gravity="center"
                                android:text="@string/ranking"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/home_sub_cv_trophy"
                        android:layout_width="225dp"
                        android:layout_height="225dp"
                        android:layout_margin="8dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorGrey3"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/ic_baseline_emoji_events_24" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorWhite"
                                android:gravity="center"
                                android:text="@string/trophy"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>